lab1/Test/L1-A-9-82.output
Error Type B at Line 16
Error Type B at Line 26
Error Type B at Line 27
Error Type B at Line 31
