lab1/Test/L1-A-9-82.cmm
float ;
struct zaZmTJmMA2iQ2T3CK1oa ;
struct Ja0RIuvJB6 bScRpE5vG9poeycFhJ 
;
int SrLhNYnHUweKFb2 ( int HZlhcONhIe ) {
}
struct zTykoii {
  int hkwGqJMGcqQm1U ;
}tiniqFPmkNgNZX0poX [ 821575220 ] , V6FnRnBC6et9TTe8 

;
struct {
  struct {
    struct _lGTrdES9kj MSStNuU9JMP ;
  }YsokbC2jvYzIrPHLP , GzVSEmy1erSCjXbBZ6W = nc5u7pk4mPv27 
    = || _Wyq && EAYOJkf == pz3ODEEmTy0hteHiR - zzI38SwA5nxBQPBPLQeR 
    / ! - - - DXfrS4bZAWMTUu6LKJ6W ( VpNymkrq1mcOg8_ , 
    KUmWsoGBJC6aoyW = ywY2bl8LNsu_i6Ll6 >= E7I + pV8PYchd 
    / k0 [ FWu8O && ( hK21mMfXt2r != ah19SYc1y4enU2lck 
    * - qO ( U4nXAlPM = vONrXrmw5kRSjPL1G < jDVXs - ( 
    wyiY3zlgOBv = ct || rsET0e38vrjOdAO > vzmM ) ) . pN8WJv 
    . P36M5zMymBB - KO + SuZgl4DovyOlfpVMG ) - hblXMfzk 
    / 1806295181 . EmFnRTCICSSRJvmFU4JY ] * - too ( ) 
    ) <= 2031608855.1111106054 . pEYas ;
};
;
;
int Jbz_mqY ( ) {
  lB ;
  r9Ns0t7aT5sP2pfD2z ;
  ;
  if ( NvkmPBjfQSb )   if ( tDPLrcnVUAKeB )   Pv ;
else   return hirnhifCXxiR ;

else   if ( T7Ndrx7oehcdX8 )   while ( Q1 ) {
  }


}
int nZy ( int vVlv39BRkP , int SE ) {
}
int ;
int ;
